fixed broken layout

--- a/public/style.css
+++ b/public/style.css
@@ -56,8 +56,12 @@ div.header {
   color: #FFC125;
   background-color: #0e1717;
   -webkit-text-stroke: 0.5px black;
-  padding: 10px 0px 10px 30px;
-  width: 100%;
+  
+  /*width: 100%;*/
+}
+
+div.header_text {
+padding: 10px 0px 10px 30px;
 }
 
 div.header h3 {
